Avoid needing to wrap tooltip component in div

--- a/src/utils/global/tooltip/tooltip.module.scss
+++ b/src/utils/global/tooltip/tooltip.module.scss
@@ -1,15 +1,5 @@
 @import '../../../variables.scss';
 
-.triangle {
-  border-color: transparent $tooltip-background-color transparent transparent;
-  border-style: solid;
-  border-width: 5px;
-  margin-top: -5px;
-  position: absolute;
-  right: 100%;
-  top: 50%;
-}
-
 .tooltip {
   background-color: $tooltip-background-color;
   border-radius: 0.5rem;
@@ -19,5 +9,16 @@
   position: fixed;
   transition: $transition;
   transition-property: opacity;
+  width: max-content;
   z-index: 1;
+
+  .triangle {
+    border-color: transparent $tooltip-background-color transparent transparent;
+    border-style: solid;
+    border-width: 5px;
+    margin-top: -5px;
+    position: absolute;
+    right: 100%;
+    top: 50%;
+  }
 }
